--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,19 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = tab
+indent_size = 4
+
+[{.jshintrc,*.json,*.yml}]
+indent_style = space
+indent_size = 2
+
+[{.editorconfig,*.md,*.txt,*.xml,*.yml}]
+indent_style = space
+indent_size = 2
+
+[{.gitattributes,*.gitignore,*.gitmodules}]
+indent_style = space
+indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
